<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="40dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="40dp"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="10dp">
    </TextView>

    <TextView
        android:id="@+id/text_perkalian"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/perkalian"
        android:textSize="25dp"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="85dp">
    </TextView>

    <TextView
        android:id="@+id/text_hasil"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/hasil"
        android:textSize="40dp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/text_perkalian"
        app:layout_constraintEnd_toEndOf="parent">
    </TextView>

    <ImageView
        android:id="@+id/garis"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:src="@drawable/line"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_hasil">
    </ImageView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.25">
    </androidx.constraintlayout.widget.Guideline>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5">
    </androidx.constraintlayout.widget.Guideline>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.75">
    </androidx.constraintlayout.widget.Guideline>


    <android.widget.Button
        android:id="@+id/nomor7"
        android:layout_width="70dp"
        android:layout_height="80dp"
        android:text="@string/nomor7"
        android:textSize="25dp"
        android:textStyle="bold"
        android:background="@drawable/square_bg"
        app:layout_constraintTop_toBottomOf="@+id/garis"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guide1">
    </android.widget.Button>

    <android.widget.Button
        android:id="@+id/nomor8"
        android:layout_width="70dp"
        android:layout_height="80dp"
        android:text="@string/nomor8"
        android:textSize="25dp"
        android:textStyle="bold"
        android:background="@drawable/square_bg"
        app:layout_constraintTop_toBottomOf="@+id/garis"
        app:layout_constraintStart_toStartOf="@id/guide1"
        app:layout_constraintEnd_toStartOf="@id/guide2">
    </android.widget.Button>

    <android.widget.Button
        android:id="@+id/nomor9"
        android:layout_width="70dp"
        android:layout_height="80dp"
        android:text="@string/nomor9"
        android:textSize="25dp"
        android:textStyle="bold"
        android:background="@drawable/square_bg"
        app:layout_constraintTop_toBottomOf="@+id/garis"
        app:layout_constraintStart_toStartOf="@id/guide2"
        app:layout_constraintEnd_toEndOf="@+id/guide3">
    </android.widget.Button>

    <android.widget.Button
        android:id="@+id/tanda_plus"
        android:layout_width="70dp"
        android:layout_height="80dp"
        android:text="@string/plus"
        android:textSize="25dp"
        android:textStyle="bold"
        android:background="@drawable/square_bg"
        app:layout_constraintTop_toBottomOf="@+id/garis"
        app:layout_constraintStart_toStartOf="@id/guide3"
        app:layout_constraintEnd_toEndOf="parent">
    </android.widget.Button>

    <android.widget.Button
        android:id="@+id/nomor4"
        android:layout_width="70dp"
        android:layout_height="80dp"
        android:text="@string/nomor4"
        android:textSize="25dp"
        android:textStyle="bold"
        android:background="@drawable/square_bg"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/nomor7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="@id/guide1">
    </android.widget.Button>

    <android.widget.Button
        android:id="@+id/nomor5"
        android:layout_width="70dp"
        android:layout_height="80dp"
        android:text="@string/nomor5"
        android:textSize="25dp"
        android:textStyle="bold"
        android:background="@drawable/square_bg"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/nomor8"
        app:layout_constraintStart_toStartOf="@id/guide1"
        app:layout_constraintEnd_toEndOf="@id/guide2">
    </android.widget.Button>

    <android.widget.Button
        android:id="@+id/nomor6"
        android:layout_width="70dp"
        android:layout_height="80dp"
        android:text="@string/nomor6"
        android:textSize="25dp"
        android:textStyle="bold"
        android:background="@drawable/square_bg"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/nomor9"
        app:layout_constraintStart_toStartOf="@id/guide2"
        app:layout_constraintEnd_toEndOf="@id/guide3">
    </android.widget.Button>

    <android.widget.Button
        android:id="@+id/tanda_minus"
        android:layout_width="70dp"
        android:layout_height="80dp"
        android:text="@string/minus"
        android:textSize="25dp"
        android:textStyle="bold"
        android:background="@drawable/square_bg"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/tanda_plus"
        app:layout_constraintStart_toStartOf="@id/guide3"
        app:layout_constraintEnd_toEndOf="parent">
    </android.widget.Button>

    <android.widget.Button
        android:id="@+id/nomor1"
        android:layout_width="70dp"
        android:layout_height="80dp"
        android:text="@string/nomor1"
        android:textSize="25dp"
        android:textStyle="bold"
        android:background="@drawable/square_bg"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/nomor4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="@id/guide1">
    </android.widget.Button>

    <android.widget.Button
        android:id="@+id/nomor2"
        android:layout_width="70dp"
        android:layout_height="80dp"
        android:text="@string/nomor2"
        android:textSize="25dp"
        android:textStyle="bold"
        android:background="@drawable/square_bg"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/nomor5"
        app:layout_constraintStart_toStartOf="@id/guide1"
        app:layout_constraintEnd_toEndOf="@id/guide2">
    </android.widget.Button>

    <android.widget.Button
        android:id="@+id/nomor3"
        android:layout_width="70dp"
        android:layout_height="80dp"
        android:text="@string/nomor3"
        android:textSize="25dp"
        android:textStyle="bold"
        android:background="@drawable/square_bg"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/nomor6"
        app:layout_constraintStart_toStartOf="@id/guide2"
        app:layout_constraintEnd_toEndOf="@id/guide3">
    </android.widget.Button>

    <android.widget.Button
        android:id="@+id/tanda_bagi"
        android:layout_width="70dp"
        android:layout_height="80dp"
        android:text="@string/bagi"
        android:textSize="25dp"
        android:textStyle="bold"
        android:background="@drawable/square_bg"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/tanda_minus"
        app:layout_constraintStart_toStartOf="@id/guide3"
        app:layout_constraintEnd_toEndOf="parent">
    </android.widget.Button>

    <android.widget.Button
        android:id="@+id/nol"
        android:layout_width="150dp"
        android:layout_height="80dp"
        android:text="@string/nol"
        android:textSize="25dp"
        android:textStyle="bold"
        android:background="@drawable/square_bg"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/nomor1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="@id/guide2">
    </android.widget.Button>

    <android.widget.Button
        android:id="@+id/tanda_kali"
        android:layout_width="70dp"
        android:layout_height="80dp"
        android:text="@string/kali"
        android:textSize="25dp"
        android:textStyle="bold"
        android:background="@drawable/square_bg"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/nomor3"
        app:layout_constraintStart_toStartOf="@id/guide2"
        app:layout_constraintEnd_toEndOf="@id/guide3">
    </android.widget.Button>

    <android.widget.Button
        android:id="@+id/tanda_samaDengan"
        android:layout_width="70dp"
        android:layout_height="80dp"
        android:text="@string/samaDengan"
        android:textSize="25dp"
        android:textStyle="bold"
        android:background="@drawable/square_bg"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/tanda_bagi"
        app:layout_constraintStart_toStartOf="@id/guide3"
        app:layout_constraintEnd_toEndOf="parent">
    </android.widget.Button>

  </androidx.constraintlayout.widget.ConstraintLayout>